fixed page spacing on index

--- a/api/static/css/style.css
+++ b/api/static/css/style.css
@@ -94,6 +94,9 @@ ul {
   display: flex;
   align-items: center;
   gap: 5rem;
+  margin: 4rem 0;
+
+
 }
 .blue-text {
   color: var(--color-primary);
